addressing review comments